--- a/SuperSimpleDev/grid.html
+++ b/SuperSimpleDev/grid.html
@@ -3,7 +3,7 @@
   <head>
     <title>Grid Practice</title>
   </head>
-  <body>
+  <body style="padding-bottom: 1000px">
     <div style="display: grid; grid-template-columns: 100px 100px">
       <div style="background-color: lightblue">Div 1</div>
       <div style="background-color: lightpink">Div 2</div>
@@ -41,6 +41,24 @@
       <div style="background-color: lightblue">100px</div>
       <div style="background-color: lightpink">1fr</div>
       <div style="background-color: lightblue">1fr</div>
+    </div>
+
+    <div
+      style="
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        margin-top: 30px;
+        column-gap: 20px;
+        row-gap: 40px;
+      "
+      ;
+    >
+      <div style="background-color: lightblue; height: 200px">1fr</div>
+      <div style="background-color: lightpink; height: 200px">1fr</div>
+      <div style="background-color: lightblue; height: 200px">1fr</div>
+      <div style="background-color: lightpink; height: 200px">1fr</div>
+      <div style="background-color: lightblue; height: 200px">1fr</div>
+      <div style="background-color: lightpink; height: 200px">1fr</div>
     </div>
   </body>
 </html>
